Polishing, Responsive CSS, Andover Page

--- a/index.html
+++ b/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta content='width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, target-densityDpi=device-dpi' name='viewport'/>
     <link rel='stylesheet' type='text/css' href='style.css'/>
     <link rel='stylesheet' type='text/css' href='sidebar.css'/>
     <link href="https://fonts.googleapis.com/css?family=Barlow:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>Samson Zhang | Filmmaker</title>
   </head>
   <body>
     <div class='container'>
       <div class='sidebar'>
-        <div class='logo'><img src='logo.png'></div>
         <div class='nav-item selected'><a href=''><span>Home</span></a></div>
-        <div class='nav-item'><a href=''><span>About</span></a></div>
-        <div class='nav-item'><a href=''><span>Resume</span></a></div>
-        <div class='nav-item'><a href=''><span>Blog</span></a></div>
+        <div class='nav-item'><a href='about/index.html'><span>About</span></a></div>
+        <div class='nav-item'><a href='szhang-resume.pdf'><span>Resume</span></a></div>
+        <div class='nav-item'><a href='contact/index.html'><span>Contact</span></a></div>
+        <div class='sidebar-social'>
+          <div class='sidebar-social-item yt'><a href='https://www.youtube.com/channel/UCNyoJQcV6NCHiRCeqcCxJag'><i class="fab fa-youtube"></i></a></div>
+          <div class='sidebar-social-item ig'><a href='https://www.instagram.com/samsonzhangthesalmon/'><i class="fab fa-instagram"></i></a></div>
+          <div class='sidebar-social-item tw'><a href='https://twitter.com/wwsalmon'><i class="fab fa-twitter"></i></a></div>
+        </div>
       </div>
       <div class='content-container'>
         <div class='content-container-inner'>
 
+          <div class='logo'><img src='logo.png'></img></div>
+
           <div class='small-head'><span>2018 Showreel</span></div>
 
           <div class='hero-video'>
-            <div class='video-container'><iframe id="ytplayer" type="text/html" src="https://www.youtube.com/embed/WplYyJehtOw?showinfo=0" frameborder="0" allowfullscreen></iframe></div>
+            <div class='video-container'><iframe id="ytplayer" type="text/html" src="https://www.youtube.com/embed/WplYyJehtOw?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe></div>
           </div>
 
-          <div class='hero-text'><span>Hello! I'm <b>Samson Zhang</b>. I'm a filmmaker and a junior (upper) at Phillips Academy.</span></div>
-
-          <div class='hero-text'><span>Learn more <a href=''>about me</a>, download <a href=''>my resume</a>, or <a href=''>say hi</a>. Scroll down to see some featured projects.</span></div>
+          <div class='hero-text'><span>Hello! I'm <b>Samson Zhang</b>. I'm a filmmaker, photographer, and junior at Phillips Academy. Learn more <a href='about/index.html'>about me</a>, download <a href='szhang-resume.pdf'>my resume</a>, or <a href='contact/index.html'>say hi</a>. Scroll down to see featured projects.</span></div>
 
           <div class='divider'></div>
 
@@ -37,7 +43,7 @@
           <div class='projects'>
 
             <div class='project-item'>
-              <a href=''>
+              <a href='andover/index.html'>
                 <img src='thumb/andover.jpg'/>
                 <h2>Andover Admissions</h2>
               </a>
@@ -45,9 +51,11 @@
             </div>
 
             <div class='project-item'>
-              <a href=''><img src='thumb/p6.jpg'/>
-                <h2>P6 Headphones Review</h2></a>
-                <p>YouTube Video, July 2017</p>
+              <a href=''>
+                <img src='thumb/anl.jpg'/>
+                <h2>John's Plan / ANL 2018</h2>
+              </a>
+              <p>Music Video, May 2018</p>
             </div>
 
             <div class='project-item'>
@@ -59,11 +67,9 @@
             </div>
 
             <div class='project-item'>
-              <a href=''>
-                <img src='thumb/anl.jpg'/>
-                <h2>John's Plan/ANL 2018</h2>
-              </a>
-              <p>Music Video, May 2018</p>
+              <a href=''><img src='thumb/p6.jpg'/>
+                <h2>P6 Headphones Review</h2></a>
+                <p>YouTube Video, July 2017</p>
             </div>
 
             <div class='project-item'>
