--- a/cyclist/index.html
+++ b/cyclist/index.html
@@ -8,10 +8,12 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Playfair+Display:400,400i,700,700i,900,900i|Roboto" rel="stylesheet"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script src='https://code.jquery.com/jquery-3.3.1.js'></script>
-    <title>Andover Admissions | Samson Zhang, filmmaker</title>
+    <title>Cyclist | Samson Zhang, filmmaker</title>
   </head>
   <body>
+
     <div class='container'>
+
       <div class='sidebar'>
         <div class='nav-item'><a href='../index.html'><span>Home</span></a></div>
         <div class='nav-item'><a href='../about/index.html'><span>About</span></a></div>
@@ -23,50 +25,25 @@
           <div class='sidebar-social-item tw'><a href='https://twitter.com/wwsalmon'><i class="fab fa-twitter"></i></a></div>
         </div>
       </div>
+
       <div class='content-container'>
         <div class='content-container-inner page'>
 
           <div class='small-head'><span>Video Case Study</span></div>
 
-          <h1>Phillips Academy Admissions (2018)</h1>
+          <h1>Cyclist (2018)</h1>
 
-          <div class='head-p'><span>A series of 2-minute long mini-videos sent to all newly admitted students promoting Andover and the #SayYesToAndover campaign.</span></div>
+          <div class='head-p'><span>30 second short film about cycling made as an application for Andover Moviemakers.</span></div>
 
-          <div class='video-container'><iframe src='https://www.youtube.com/embed/bC0NVqqkSzM' frameborder='0' allowfullscreen></iframe></div>
+          <div class='video-container'><iframe src='https://www.youtube.com/embed/Vk1xYyLmjiU' frameborder='0' allowfullscreen></iframe></div>
 
-          <div class='video-container'><iframe src='https://www.youtube.com/embed/DkBIp9VR1ig' frameborder='0' allowfullscreen></iframe></div>
+          <p>Andover Moviemakers is Phillips Academy's premier community and organization of filmmakers. The board application this year required a thirty-second short film. Taking the opportunity of being Andover Cycling's team photographer when I wasn't racing, I made a little short about cycling, featuring teammate Grace Hitchcock and other racers in the league.</p>
 
-          <div class='video-container'><iframe src='https://www.youtube.com/embed/INptL9hA9_U' frameborder='0' allowfullscreen></iframe></div>
+          <div class='small-head'><span>A few snaps</span></div>
 
-          <div class='video-container'><iframe src='https://www.youtube.com/embed/jeYHS-Pjg4M' frameborder='0' allowfullscreen></iframe></div>
-
-          <p>Phillips Academy is a prestigious private high school in Andover, MA. In winter 2017-18, I worked with the admissions office and fellow student Sophie Huang '20 to produce a set of five videos showcasing the math, science, art, and theater/dance departments, as well as one on student weekend life. These were sent out to all newly admitted students as a part of the 2018 #SayYesToAndover campaign.</p>
-
-          <p>My contribution:</p>
-
-          <ul>
-            <li>Edited 3 of 5 two-minute long academic department videos</li>
-            <li>Shot 4 of 7 interviews with faculty and students</li>
-            <li>Made motion graphics for all videos</li>
-            <li>Event coverage and classroom footage: ~60-70% of all footage used</li>
-          </ul>
-
-          <p>Tools used:</p>
-
-          <ul>
-            <li>Sony A6500 with Sony 35mm f/1.8 Prime</li>
-            <li>(Sophie's) Zoom H1 Audio Recorder</li>
-            <li>Konova K5 Slider</li>
-            <li>Adobe Premiere Pro and Adobe After Effects</li>
-          </ul>
-
-          <img src='art-zemlin.jpg'></img>
-
-          <img src='science3.jpg'></img>
-
-          <img src='bts1.jpg'></img>
-
-          <img src='bts2.jpg'></img>
+          <img src='pic-1.jpg'>
+          <img src='pic-2.jpg'>
+          <img src='pic-3.jpg'>
 
           <div class='back small-head'><a href='../index.html'><span><i class="fas fa-long-arrow-alt-left"></i> Back Home</span></a></div>
 
