--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel='stylesheet' type='text/css' href='sidebar.css'/>
     <link href="https://fonts.googleapis.com/css?family=Barlow:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <script src='https://code.jquery.com/jquery-3.3.1.js'></script>
     <title>Samson Zhang | Filmmaker</title>
   </head>
   <body>
@@ -51,7 +52,7 @@
             </div>
 
             <div class='project-item'>
-              <a href=''>
+              <a href='anl/index.html'>
                 <img src='thumb/anl.jpg'/>
                 <h2>John's Plan / ANL 2018</h2>
               </a>
@@ -59,7 +60,7 @@
             </div>
 
             <div class='project-item'>
-              <a href=''>
+              <a href='cyclist/index.html'>
                 <img src='thumb/cyclist.jpg'/>
                 <h2>Cyclist</h2>
               </a>
@@ -111,5 +112,6 @@
         </div>
       </div>
     </div>
+    <script src='menu.js'></script>
   </body>
 </html>
