JS Sidebar, About, Contact pages

--- a/andover/index.html
+++ b/andover/index.html
@@ -12,17 +12,6 @@
   </head>
   <body>
     <div class='container'>
-      <div class='sidebar'>
-        <div class='nav-item'><a href='../index.html'><span>Home</span></a></div>
-        <div class='nav-item'><a href='../about/index.html'><span>About</span></a></div>
-        <div class='nav-item'><a href='../szhang-resume.pdf'><span>Resume</span></a></div>
-        <div class='nav-item'><a href='contact/index.html'><span>Contact</span></a></div>
-        <div class='sidebar-social'>
-          <div class='sidebar-social-item yt'><a href='https://www.youtube.com/channel/UCNyoJQcV6NCHiRCeqcCxJag'><i class="fab fa-youtube"></i></a></div>
-          <div class='sidebar-social-item ig'><a href='https://www.instagram.com/samsonzhangthesalmon/'><i class="fab fa-instagram"></i></a></div>
-          <div class='sidebar-social-item tw'><a href='https://twitter.com/wwsalmon'><i class="fab fa-twitter"></i></a></div>
-        </div>
-      </div>
       <div class='content-container'>
         <div class='content-container-inner page'>
 
@@ -51,15 +40,6 @@
             <li>Event coverage and classroom footage: ~60-70% of all footage used</li>
           </ul>
 
-          <p>Tools used:</p>
-
-          <ul>
-            <li>Sony A6500 with Sony 35mm f/1.8 Prime</li>
-            <li>(Sophie's) Zoom H1 Audio Recorder</li>
-            <li>Konova K5 Slider</li>
-            <li>Adobe Premiere Pro and Adobe After Effects</li>
-          </ul>
-
           <img src='art-zemlin.jpg'></img>
 
           <img src='science3.jpg'></img>
@@ -74,5 +54,6 @@
       </div>
     </div>
     <script src='../menu.js'></script>
+    <script>buildMenu("page","none");</script>
   </body>
 </html>
