--- a/anl/index.html
+++ b/anl/index.html
@@ -14,18 +14,6 @@
 
     <div class='container'>
 
-      <div class='sidebar'>
-        <div class='nav-item'><a href='../index.html'><span>Home</span></a></div>
-        <div class='nav-item'><a href='../about/index.html'><span>About</span></a></div>
-        <div class='nav-item'><a href='../szhang-resume.pdf'><span>Resume</span></a></div>
-        <div class='nav-item'><a href='contact/index.html'><span>Contact</span></a></div>
-        <div class='sidebar-social'>
-          <div class='sidebar-social-item yt'><a href='https://www.youtube.com/channel/UCNyoJQcV6NCHiRCeqcCxJag'><i class="fab fa-youtube"></i></a></div>
-          <div class='sidebar-social-item ig'><a href='https://www.instagram.com/samsonzhangthesalmon/'><i class="fab fa-instagram"></i></a></div>
-          <div class='sidebar-social-item tw'><a href='https://twitter.com/wwsalmon'><i class="fab fa-twitter"></i></a></div>
-        </div>
-      </div>
-
       <div class='content-container'>
         <div class='content-container-inner page'>
 
@@ -53,19 +41,12 @@
           <img src='keynotes.jpg'/>
           <img src='kormanskorner2.jpg'/>
 
-          <p>Tools used:</p>
-
-          <ul>
-            <li>Sony A6500 w/ Sony 35mm f/1.8</li>
-            <li>Adobe Premiere Pro</li>
-            <li>Adobe Photoshop</li>
-          </ul>
-
           <div class='back small-head'><a href='../index.html'><span><i class="fas fa-long-arrow-alt-left"></i> Back Home</span></a></div>
 
         </div>
       </div>
     </div>
     <script src='../menu.js'></script>
+    <script>buildMenu("page","none");</script>
   </body>
 </html>
