--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, target-densityDpi=device-dpi' name='viewport'/>
+    <link rel="shortcut icon" href="logo.png" />
     <link rel='stylesheet' type='text/css' href='style.css'/>
     <link rel='stylesheet' type='text/css' href='sidebar.css'/>
     <link href="https://fonts.googleapis.com/css?family=Barlow:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet"/>
@@ -11,17 +12,6 @@
   </head>
   <body>
     <div class='container'>
-      <div class='sidebar'>
-        <div class='nav-item selected'><a href=''><span>Home</span></a></div>
-        <div class='nav-item'><a href='about/index.html'><span>About</span></a></div>
-        <div class='nav-item'><a href='szhang-resume.pdf'><span>Resume</span></a></div>
-        <div class='nav-item'><a href='contact/index.html'><span>Contact</span></a></div>
-        <div class='sidebar-social'>
-          <div class='sidebar-social-item yt'><a href='https://www.youtube.com/channel/UCNyoJQcV6NCHiRCeqcCxJag'><i class="fab fa-youtube"></i></a></div>
-          <div class='sidebar-social-item ig'><a href='https://www.instagram.com/samsonzhangthesalmon/'><i class="fab fa-instagram"></i></a></div>
-          <div class='sidebar-social-item tw'><a href='https://twitter.com/wwsalmon'><i class="fab fa-twitter"></i></a></div>
-        </div>
-      </div>
       <div class='content-container'>
         <div class='content-container-inner'>
 
@@ -113,5 +103,6 @@
       </div>
     </div>
     <script src='menu.js'></script>
+    <script>buildMenu("home","none");</script>
   </body>
 </html>
