--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
             </div>
 
             <div class='project-item'>
-              <a href=''><img src='thumb/p6.jpg'/>
+              <a href='p6/index.html'><img src='thumb/p6.jpg'/>
                 <h2>P6 Headphones Review</h2></a>
                 <p>YouTube Video, July 2017</p>
             </div>
 
             <div class='project-item'>
-              <a href=''>
+              <a href='moments/index.html'>
                 <img src='thumb/moments.jpg'/>
                 <h2>Moments</h2>
               </a>
