--- a/moments/index.html
+++ b/moments/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Playfair+Display:400,400i,700,700i,900,900i|Roboto" rel="stylesheet"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script src='https://code.jquery.com/jquery-3.3.1.js'></script>
-    <title>P6 Headphones Review | Samson Zhang, filmmaker</title>
+    <title>Moments | Samson Zhang, filmmaker</title>
   </head>
   <body>
 
@@ -19,11 +19,11 @@
 
           <div class='small-head'><span>Video Case Study</span></div>
 
-          <h1>P6 Headphones Review (2017)</h1>
+          <h1>Moments (2017)</h1>
 
-          <div class='head-p'><span>8-minute YouTube video review of the Sound Intone P6 headphones.</span></div>
+          <div class='head-p'><span>Cinematic travel film of the American Southwest.</span></div>
 
-          <div class='video-container'><iframe src='https://www.youtube.com/embed/GBd9evmgadg' frameborder='0' allowfullscreen></iframe></div>
+          <div class='video-container'><iframe src='https://www.youtube.com/embed/UDABBKtyu-U' frameborder='0' allowfullscreen></iframe></div>
 
           <div class='back small-head'><a href='../index.html'><span><i class="fas fa-long-arrow-alt-left"></i> Back Home</span></a></div>
 
