FoWa, G4G, Lily Pages, Adding Content

--- a/andover/index.html
+++ b/andover/index.html
@@ -40,6 +40,8 @@
             <li>Event coverage and classroom footage: ~60-70% of all footage used</li>
           </ul>
 
+          <div class='small-head'><span>Gallery</span></div>
+
           <img src='art-zemlin.jpg'></img>
 
           <img src='science3.jpg'></img>
