--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class='video-container'><iframe id="ytplayer" type="text/html" src="https://www.youtube.com/embed/WplYyJehtOw?showinfo=0&rel=0" frameborder="0" allowfullscreen></iframe></div>
           </div>
 
-          <div class='hero-text'><span>Hello! I'm <b>Samson Zhang</b>. I'm a filmmaker, photographer, and junior at Phillips Academy. Learn more <a href='about/index.html'>about me</a>, download <a href='szhang-resume.pdf'>my resume</a>, or <a href='contact/index.html'>say hi</a>. Scroll down to see featured projects.</span></div>
+          <div class='hero-text'><span>Hello! I'm <b>Samson Zhang</b>. I'm a filmmaker, photographer, and junior at Phillips Academy. Scroll down to see featured projects.</span></div>
 
           <div class='divider'></div>
 
@@ -38,7 +38,7 @@
                 <img src='thumb/andover.jpg'/>
                 <h2>Andover Admissions</h2>
               </a>
-              <p>Promotional Campaign, March 2018</p>
+              <p>Promotional Campaign, 2018</p>
             </div>
 
             <div class='project-item'>
@@ -68,33 +68,35 @@
                 <img src='thumb/moments.jpg'/>
                 <h2>Moments</h2>
               </a>
-              <p>Short Film, August 2017</p>
+              <p>Short Film, Aug 2017 / Feb 2018</p>
             </div>
 
             <div class='project-item'>
-              <a href=''>
+              <a href='2train/index.html'>
                 <img src='thumb/2train.jpg'/>
-                <h2>2 Train Robotics</h2>
+                <h2>Columbia University's 2 Train Robotics</h2>
               </a>
-              <p>Media Direction, August 2017</p>
+              <p>Media Direction, 2016-17</p>
             </div>
 
             <div class='project-item'>
-              <a href=''><img src='thumb/fowa.jpg'/>
+              <a href='fowa/index.html'><img src='thumb/fowa.jpg'/>
               <h2>Food Waste Challenge</h2></a>
               <p>Promotional Video, April 2018</p>
             </div>
 
             <div class='project-item'>
-              <a href=''><img src='thumb/g4g.jpg'/>
-              <h2>Greenlight 4 Girls</h2></a>
-              <p>Highlight Video, April 2018</p>
+              <a href='lily/index.html'>
+                <img src='thumb/lily.jpg'/>
+                <h2>Lily</h2>
+              </a>
+              <p>Short Film, January 2018</p>
             </div>
 
             <div class='project-item'>
-              <a href=''><img src='thumb/lily.jpg'/>
-              <h2>Gaze</h2></a>
-              <p>Short Film, October 2017</p>
+              <a href='g4g/index.html'><img src='thumb/g4g.jpg'/>
+              <h2>Greenlight for Girls</h2></a>
+              <p>Highlight Video, April 2018</p>
             </div>
 
           </div>
