--- a/p6/index.html
+++ b/p6/index.html
@@ -25,6 +25,16 @@
 
           <div class='video-container'><iframe src='https://www.youtube.com/embed/GBd9evmgadg' frameborder='0' allowfullscreen></iframe></div>
 
+          <div class='small-head'><span>Gallery</span></div>
+
+          <img src='motion3.gif'/>
+
+          <img src='cine6.jpg'/>
+
+          <img src='cine1.gif'/>
+
+          <img src='cine8.jpg'/>
+
           <div class='back small-head'><a href='../index.html'><span><i class="fas fa-long-arrow-alt-left"></i> Back Home</span></a></div>
 
         </div>
