--- a/moments/index.html
+++ b/moments/index.html
@@ -19,11 +19,25 @@
 
           <div class='small-head'><span>Video Case Study</span></div>
 
-          <h1>Moments (2017)</h1>
+          <h1>Moments (2017/18)</h1>
 
           <div class='head-p'><span>Cinematic travel film of the American Southwest.</span></div>
 
           <div class='video-container'><iframe src='https://www.youtube.com/embed/UDABBKtyu-U' frameborder='0' allowfullscreen></iframe></div>
+
+          <p>In summer 2017, my family and I took a trip to the American Southwest - Vegas, the Grand Canyon, Red Rock Canyon, Antelope Canyon. I brought my beefy RX10II along without any serious intention to shoot a video. Still, I ended up getting some good stuff - half a year later, I rediscovered all of the gorgeous footage and decided to put a little travel film together.</p>
+
+          <div class='small-head'><span>Gallery</span></div>
+
+          <img src='thumbnail.jpg'/>
+
+          <img src='graded1.jpg'/>
+
+          <img src='graded2.jpg'/>
+
+          <img src='graded3c.jpg'/>
+
+          <img src='graded5a.jpg'/>
 
           <div class='back small-head'><a href='../index.html'><span><i class="fas fa-long-arrow-alt-left"></i> Back Home</span></a></div>
 
